--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 								</div>
 								<div class="products-section__item item-products mix all art ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Petition.jpg" alt="Petition">
+										<img class="item-products__img" src="assets/img/petition.jpg" alt="Petition">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -248,7 +248,7 @@
 								</div>
 								<div class="products-section__item item-products mix all art ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Metamorph.jpg" alt="Metamorph">
+										<img class="item-products__img" src="assets/img/metamorph.jpg" alt="Metamorph">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -261,7 +261,7 @@
 								</div>
 								<div class="products-section__item item-products mix all art ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Castel-Sand.jpg" alt="Castel Sand">
+										<img class="item-products__img" src="assets/img/castel-Sand.jpg" alt="Castel Sand">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -274,7 +274,7 @@
 								</div>
 								<div class="products-section__item item-products mix all art ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Nuckle.jpg" alt="Nuckle">
+										<img class="item-products__img" src="assets/img/nuckle.jpg" alt="Nuckle">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -287,7 +287,7 @@
 								</div>
 								<div class="products-section__item item-products mix all art ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Incublast.jpg" alt="Incublast">
+										<img class="item-products__img" src="assets/img/incublast.jpg" alt="Incublast">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -300,7 +300,7 @@
 								</div>
 								<div class="products-section__item item-products mix all sports">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Nuckle.jpg" alt="Nuckle">
+										<img class="item-products__img" src="assets/img/nuckle.jpg" alt="Nuckle">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -313,7 +313,7 @@
 								</div>
 								<div class="products-section__item item-products mix all collectibles">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Incublast.jpg" alt="Incublast">
+										<img class="item-products__img" src="assets/img/incublast.jpg" alt="Incublast">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -326,7 +326,7 @@
 								</div>
 								<div class="products-section__item item-products mix all gaming">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Incublast.jpg" alt="Incublast">
+										<img class="item-products__img" src="assets/img/incublast.jpg" alt="Incublast">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -339,7 +339,7 @@
 								</div>
 								<div class="products-section__item item-products mix all gaming ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Inception.jpg" alt="Inception">
+										<img class="item-products__img" src="assets/img/inception.jpg" alt="Inception">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -352,7 +352,7 @@
 								</div>
 								<div class="products-section__item item-products mix all photography">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Sink-Love.jpg" alt="Sink Love">
+										<img class="item-products__img" src="assets/img/sink-Love.jpg" alt="Sink Love">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -365,7 +365,7 @@
 								</div>
 								<div class="products-section__item item-products mix all music">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Castel-Sand.jpg" alt="Castel Sand">
+										<img class="item-products__img" src="assets/img/castel-sand.jpg" alt="Castel Sand">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -378,7 +378,7 @@
 								</div>
 								<div class="products-section__item item-products mix all virtual-Worlds">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Metamorph.jpg" alt="Metamorph">
+										<img class="item-products__img" src="assets/img/metamorph.jpg" alt="Metamorph">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
@@ -391,7 +391,7 @@
 								</div>
 								<div class="products-section__item item-products mix all trading-Cards">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/Petition.jpg" alt="Petition">
+										<img class="item-products__img" src="assets/img/petition.jpg" alt="Petition">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
