--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 								</div>
 								<div class="products-section__item item-products mix all art ">
 									<div class="item-products__image">
-										<img class="item-products__img" src="assets/img/castel-Sand.jpg" alt="Castel Sand">
+										<img class="item-products__img" src="assets/img/castel-sand.jpg" alt="Castel Sand">
 									</div>
 									<div class="item-products__info-box info-box">
 										<div class="info-box__product-info info-product">
